Fix Netlify SPA routing configuration